[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/AppPanel.gd" type="Script" id=1]
[ext_resource path="res://Scenes/CryptoGame.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/CryptoGame.gd" type="Script" id=3]
[ext_resource path="res://Art/appbg.png" type="Texture" id=4]
[ext_resource path="res://Scenes/StartScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://Art/closeappbtnpressed.png" type="Texture" id=8]
[ext_resource path="res://Art/closeappbtn.png" type="Texture" id=9]
[ext_resource path="res://Art/closeappbtnhover.png" type="Texture" id=10]

[node name="CryptoApp" type="TextureRect"]
self_modulate = Color( 0.541176, 0.541176, 0.541176, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -99.6119
margin_top = -68.096
margin_right = -547.612
margin_bottom = -300.096
texture = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game" parent="." instance=ExtResource( 2 )]
position = Vector2( 96, 64 )
z_as_relative = false
script = ExtResource( 3 )

[node name="StartScreen" parent="." instance=ExtResource( 5 )]

[node name="Label" parent="StartScreen" index="1"]
margin_left = 15.8913
margin_right = 181.891
text = "CRYPTO MINER

Every tile adds +$750 to your bills
There are 5 crypto coins to find"

[node name="CloseApp" type="TextureButton" parent="."]
margin_left = 172.812
margin_top = 3.34893
margin_right = 188.812
margin_bottom = 19.3489
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartScreen/StartButton" to="Game" method="_start_game"]
[connection signal="pressed" from="CloseApp" to="." method="_close_app"]
[connection signal="pressed" from="CloseApp" to="Game" method="_end_game"]

[editable path="StartScreen"]
